# kitt4sme.fipy

./: README.md  pyproject.toml
fipy/: __init__.py  dict.py  identity.py  wait.py
fipy/cfg/: reader.py
fipy/docker/: __init__.py  compose.py
fipy/http/: header.py  jclient.py
fipy/ngsi/: entity.py  headers.py  orion.py  quantumleap.py
fipy/sim/: generator.py  sampler.py
tests/e2e/: conftest.py  docker-compose.yml  test_current_ctx.py  test_ql_entity_summaries.py  test_time_series.py
tests/unit/: test_dict.py  test_version.py
tests/unit/cfg/: test_reader.py
tests/unit/ngsi/: test_entity.py  test_entity_json.py  test_entity_series.py  test_headers.py  test_ql_entity_summary.py
tests/unit/sim/: test_generator.py
tests/util/: fiware.py
