[tool.poetry]
name = "fipy"
version = "0.1.0"
description = ""
authors = ["c0c0n3"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
uri = "^2.0.1"
requests = "^2.27.1"
PyYAML = "^6.0"
bitmath = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
