[tool.poetry]
name = "fipy"
version = "0.11.0"
description = "Python utils for a little sweeter FIWARE experience."
authors = ["c0c0n3"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
uri = { git = "https://github.com/marrow/uri.git", rev = "5b58db87451ca4680004a8993a56bfc4dafff4d4" }
requests = "^2.27.1"
PyYAML = "^6.0"
bitmath = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
coverage = "^6.3"
pandas = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
